added a footer, messing with widths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,10 @@
     ],
     "cSpell.words": [
         "reyno"
+    ],
+    "cSpell.ignoreWords": [
+        "backsplash",
+        "poutine",
+        "tabindex"
     ]
 }
